--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  margin: 0 auto; /* Center the block */
-  font-family: "Inter", Arial, sans-serif; /* Use Inter font with Arial and generic sans-serif as fallbacks */
+  margin: 0 auto;
+  font-family: "Inter", Arial, sans-serif;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
