--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,8 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  margin: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-family: "Noto Serif", "Times New Roman", serif;
+  margin: 0 auto;
+  font-family: Inter, Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
