--- a/pages/index.css
+++ b/pages/index.css
@@ -13,11 +13,10 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   background-color: #ffffff;
   background-image: url(../images/background_header.svg);
   background-repeat: no-repeat;
-  background-position: center right;
+  background-position: center;
   background-size: cover;
   position: relative;
 }
@@ -55,12 +54,6 @@
   color: #000;
 }
 
-.header__content {
-  max-width: 729px;
-  z-index: 2;
-  margin-top: auto;
-}
-
 .header__title {
   font-size: 60px;
   margin: 183px 0 0;
@@ -88,7 +81,6 @@
   line-height: 30px;
   margin: 28px 0 0;
   z-index: 2;
-  padding-top: 28px;
 }
 
 .header__image {
@@ -142,7 +134,6 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  margin-bottom: 215px;
   margin-top: 24px;
   color: #ffffff;
 }
