--- a/pages/index.css
+++ b/pages/index.css
@@ -58,7 +58,7 @@
   font-size: 60px;
   margin: 183px 0 0;
   font-weight: 500;
-  font-family: "Inter" Arial, sans-serif;
+  font-family: Inter, Arial, sans-serif;
   line-height: 72px;
   letter-spacing: -0.6px;
   z-index: 2;
@@ -66,7 +66,7 @@
 
 .header__span-accent {
   display: block;
-  font-family: "Noto Serif" "Times New Roman", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -96,7 +96,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: auto;
-  font-family: "Inter" arial, sans-serif;
+  font-family: Inter, arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -118,6 +118,10 @@
 .recipes {
   padding: 100px 80px 215px;
   background-color: #0a2750;
+  background-image: url(/images/background_recipes.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .recipes__videos {
@@ -159,4 +163,8 @@
   margin-top: 24px;
   margin-bottom: 0;
   color: #ffffff;
+}
+.recipes__iframe {
+  height: 273px;
+  width: 480px;
 }
