--- a/blocks/about.css
+++ b/blocks/about.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   color: #fff;
   position: relative;
-  z-index: -4;
+  z-index: 1;
   overflow: hidden;
   padding: 100px 80px 173px;
 }
@@ -38,6 +38,10 @@
   justify-content: flex-end;
 }
 
+.about__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
 .about__circle {
   height: 426px;
   width: 426px;
@@ -50,12 +54,12 @@
 }
 
 .about__circle_animation_blurred {
-  animation: pulsate 1.3s ease-in-out infinite alternate;
+  animation: pulsate 1.3s ease-in-out infinite;
 }
 
 @keyframes pulsate {
   0% {
-    opacity: 100%;
+    opacity: 0;
   }
 
   50% {
