--- a/blocks/form.css
+++ b/blocks/form.css
@@ -34,7 +34,7 @@
 .form__label {
   margin-bottom: 32px;
   display: block;
-  font-family: "inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -46,7 +46,7 @@
   justify-content: center;
   margin-bottom: 120px;
   margin-top: 32px;
-  font-family: "inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
