--- a/blocks/header.css
+++ b/blocks/header.css
@@ -11,6 +11,7 @@
   background-position: center;
   background-size: cover;
   position: relative;
+  box-sizing: border-box;
 }
 
 .header__title {
