--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -22,5 +22,5 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
 }
